| Bug #11055 | information_schema: routines.sql_data_access has wrong value | ||
|---|---|---|---|
| Submitted: | 3 Jun 2005 1:43 | Modified: | 23 Jun 2005 23:54 |
| Reporter: | Peter Gulutzan | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.7-beta-debug | OS: | Linux (SUSE 9.2) |
| Assigned to: | Sergey Gluhov | Target Version: | |
[3 Jun 2005 1:43]
Peter Gulutzan
[3 Jun 2005 1:49]
Jorge del Conde
I was able to reproduce this using 5.0.7 from bk:
mysql> create procedure pix () modifies sql data set @a = 5;
Query OK, 0 rows affected, 2 warnings (0.02 sec)
mysql> select sql_data_access from information_schema.routines where
-> specific_name='pix';
+-----------------+
| sql_data_access |
+-----------------+
| |
+-----------------+
1 row in set (0.00 sec)
[7 Jun 2005 10:50]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/25677
[16 Jun 2005 9:13]
Sergey Gluhov
Fixed in 5.0.8
[16 Jun 2005 17:09]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/26064
[23 Jun 2005 23:54]
Mike Hillyer
Documented in 5.0.8 changelog.
