Fix for bug#11055: information_schema: routines.sql_data_access has wrong value